scribble/scribble-assertions/src/test/resources/bad/extensions/assrtcore/safety/assrtprog/AssrtCoreTest24.scr
module bad.extensions.assrtcore.safety.assrtprog.AssrtCoreTest24;


type <java> "java.lang.Integer" from "rt.jar" as int;  // FIXME: int keyword


//*
global protocol Proto1(role A, role B)
{
	1(x:int) from A to B; @"(x>3)"
	choice at B
	{
		2() from B to A; @"(x>4)"
		2() from B to A; @"(x<3)"
		2() from B to A; @"False"  // Not detected as error (unary-choice assrt-prog OK)
		2() from A to B; @"False"
	}	
	or
	{
		3() from B to A;
	}
}
//*/
